# ms-premioshuella-back

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_artist_stand.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/models/: __init__.py  admin.py  artist.py  category.py  colabora.py  contact.py  initial_vote.py  newsletter.py  participation.py  profile.py  stand.py  user.py
app/routers/: artist.py  auth.py  category.py  colabora.py  contact.py  newsletter.py  participation.py  stand.py  vote.py
app/schemas/: artist.py  auth.py  category.py  colabora.py  contact.py  newsletter.py  participation.py  stand.py  user.py  vote.py
app/services/: artist.py  auth.py  category.py  colabora.py  contact.py  file.py  newsletter.py  participation.py  stand.py  storage.py  vote.py
prompts/01-api-db-definition/: 01-api-db-definition.md
prompts/02-api-artist/: 02-api-artist.md
prompts/03-docker/: 03-add-docker.md
prompts/04-github-actions/: 04-github-actions.md
prompts/05-functionalities/: 05-send-email.md
