[tool.poetry]
name = "ms-premioshuella-back"
version = "0.1.0"
description = "Premios Huella Backend API"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
sqlalchemy = "^2.0"
mysql-connector-python = "^9.2"
alembic = "^1.14"
pydantic-settings = "^2.7"
authlib = "^1.4"
httpx = "^0.28"
python-jose = {extras = ["cryptography"], version = "^3.3"}
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
