[tool.poetry]
name = "ms-premioshuella-back"
version = "0.1.0"
description = "Premios Huella Backend API"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.14"
pydantic = {extras = ["email"], version = "^2.10"}
pydantic-settings = "^2.7"
supabase = "^2.13"
PyJWT = {extras = ["crypto"], version = "^2.10"}
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
